Add UTF-8 meta tag

--- a/public/font/font.css
+++ b/public/font/font.css
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-    font-family: 'BR Hendrix Semi Bold';
+    font-family: 'BR Hendrix Semi Bold Italic';
     src: url('BRHendrix-SemiBoldItalic.eot');
     src: local('BR Hendrix Semi Bold Italic'), local('BRHendrix-SemiBoldItalic'),
         url('BRHendrix-SemiBoldItalic.eot?#iefix') format('embedded-opentype'),
