Add UTF-8 meta tag

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css");
-/* @import url("../../public/font/font.css"); */
+@import url("/../font/font.css");
 @import url("./styles/style.css");
 @import url("./styles/product.css");
 @import url("./styles/blog.css");
@@ -268,4 +268,9 @@ input[type="checkbox"]:checked {
 
 .light-bg-color{
   background: rgba(244, 247, 251, 0.6) !important;
+}
+
+.site-card-active {
+  box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+  background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
 }
