--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -48,6 +48,7 @@
     font-weight: 400;
     font-size: 16px;
     color: var(--nav-link);
+    font-family: 'BR Hendrix Regular';
 }
 
 .categories_nav_item{
