--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  font-family: "BR Hendrix Regular" !important;
+  font-family: "BR Hendrix Medium" !important;
   /* font-family: "Arial" !important; */
   margin: 0;
   padding: 0;
