--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css");
-@import url("../../public/font/font.css");
+/* @import url("../../public/font/font.css"); */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url("./styles/style.css");
 @import url("./styles/product.css");
 @import url("./styles/blog.css");
@@ -20,8 +21,9 @@
 }
 
 body {
-  font-family: "BR Hendrix Medium" !important;
+  /* font-family: "BR Hendrix Medium" !important; */
   /* font-family: "Arial" !important; */
+  font-family: 'Lato', sans-serif !important;
   margin: 0;
   padding: 0;
 }
@@ -42,21 +44,36 @@ h4,
 h5,
 h6 {
   margin: 0 !important;
+  font-family: 'Lato', sans-serif !important;
+  font-weight: 600 !important;
 }
 
 p {
   margin: 0 !important;
+  font-family: 'Lato', sans-serif !important;
+  font-weight: 500 !important;
 }
+
+span, ul li, label, button{
+  font-family: 'Lato', sans-serif !important;
+}
+
+button{
+  font-family: 'Lato', sans-serif !important;
+  font-weight: 600 !important;
+} 
 
 ul,
 ol {
   list-style: none !important;
   padding: 0 !important;
   margin: 0 !important;
+  font-family: 'Lato', sans-serif !important;
 }
 
 a {
   text-decoration: none !important;
+  font-family: 'Lato', sans-serif !important;
 }
 
 input:focus,
