--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -23,7 +23,7 @@
  display: flex;
  align-items: center;
  gap: 5px;
- font-family: 'BR Hendrix Medium';
+ font-family: 'Lato', sans-serif !important;
 }
 .breadcrumb-group .breadcrumb-items:nth-child(2)::before{
     content: "\ea4d" !important;
@@ -81,7 +81,7 @@
     line-height: 26px;
     font-weight: 400;
     padding: 0px 10px;
-    font-family: 'BR Hendrix Medium';
+    font-family: 'Lato', sans-serif !important;
 }
 .blog-card .dates{
     background-color: #fff;
@@ -158,7 +158,7 @@ button.view-blog{
     padding: 10px 30px;
     height: 50px;
     border: none !important;
-    font-family: 'BR Hendrix Medium';
+    font-family: 'Lato', sans-serif !important;
 }
 
 button.view-blog:hover {
@@ -418,7 +418,7 @@ button.view-blog i{
 .form .form-label{
     font-size: 18px;
     color: rgba(39, 48, 78, 0.9);
-    font-family: 'BR Hendrix Medium';
+    font-family: 'Lato', sans-serif !important;
 }
 .form input{
     height: 45px;
