--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,12 +96,12 @@ select {
   padding: 40px 0;
 }
 
-header {
+/* header {
   position: sticky;
   top: 0;
   z-index: 1000;
   background: #fff;
-}
+} */
 
 .para_content_text {
   font-weight: 400;
@@ -155,7 +155,7 @@ header {
 
 .site_tabs .nav-item button {
   color: var(--heading-color) !important;
-  font-weight: 400;
+  font-weight: 400 !important;
   font-size: 18px;
   line-height: 44px;
   opacity: 0.7;
