--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -8,10 +8,7 @@
 
 .breadcrumb-section{
     background:var(--bg-product);
-}
-
-.breadcrumb-section .breadcrumb-group{
-    margin: 15px 0px 25px 0px;
+    padding: 22px 0;
 }
 .breadcrumb-group .breadcrumb-items a{
     color: var(--breadcrumb-items);
@@ -57,6 +54,15 @@
     margin: 25px 0;
 }
 
+.blog-card:hover img{
+    transform: scale(1.1);
+    transition: .5s;
+}
+
+.blog-card .blog-card-img{
+    overflow: hidden;
+}
+
 .blog-card,
 .cardsGrid .blog-card {
     border: 1px solid #E3ECF6;
@@ -71,9 +77,10 @@
     height: 230px;
     border-radius: 5px;
     object-fit: cover;
+    transition: .5s;
 }
 
-.blog-card h6, 
+.blog-card .blog-title, 
 .cardsGrid .blog-card h6{
     font-size: 18px;
     margin: 12px auto !important;
@@ -159,6 +166,8 @@ button.view-blog{
     height: 50px;
     border: none !important;
     font-family: 'Lato', sans-serif !important;
+    font-weight: 400 !important;
+    font-size: 18px;
 }
 
 button.view-blog:hover {
@@ -208,6 +217,7 @@ button.view-blog i{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 400;
 }
 .pagination-group .pagination-items span{
     background: #437ece;
@@ -253,7 +263,7 @@ button.view-blog i{
     position: relative !important;
     top: 3px;
     color:#2C3440;
-    font-weight: 600;
+    font-weight: 400;
 }
 .pagination-group .pagination-last a span.visually-hidden:last-child{
     color: #437ECE;
@@ -330,13 +340,14 @@ button.view-blog i{
     object-fit: cover;   
 }
 
-.blog-card h6{
+.blog-card .blog-title{
     font-size: 18px;
-    margin: 12px auto !important;
+    margin: 10px auto !important;
     color:  var(--heading-color);
     line-height: 26px;
-    font-weight: 400;
+    font-weight: 600;
     padding: 0px 10px;
+    display: block;
 }
 
 .blog-card .category{
@@ -427,5 +438,6 @@ button.view-blog i{
     background: var(--secondary-color);
     border-radius: 3px;
     padding: 10px 30px;
-    font-size: 18px;
+    font-size: 17px;
+    font-weight: 400;
 }
