--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -2,11 +2,23 @@
     position:static !important;
 }
 
+.nav-dropdown-item .nav-item a.dropdown-toggle.nav-link:hover .dropdown-menu{
+    display: block !important;
+}
+
 .nav-dropdown-item .dropdown-toggle::after{
     content: "\ea4d" !important;
     font-family: remixicon!important;
     border: none !important;
     vertical-align: middle !important;
+}
+
+.dropdown-toggle.nav-link:hover{
+    cursor: pointer;
+}
+
+.dropdown-toggle.nav-link:hover ~ .dropdown-menu.container{
+    display: block !important;
 }
 
 .nav-dropdown-item .dropdown-menu {
@@ -19,6 +31,8 @@
     background: var(--heading-color);
     padding: 20px 30px;
     color: var(--white-color);
+    left: 0;
+    right: 0;
 }
 
 .nav-list-section h6 {
@@ -42,6 +56,10 @@
 
 .nav-dropdown-item .container .row .col-md-3:last-child .nav-list-section{
     border-right: none;
+}
+
+footer .search-icon{
+    width: 60px;
 }
 
 .search-icon{
@@ -77,7 +95,7 @@
 }
 
 .footer_heading {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 18px;
     line-height: 23px;
     color: var(--heading-color);
@@ -148,14 +166,14 @@
 .hero_section h1{
     font-size:40px;
     margin: 0 0 32px !important;
-    font-weight: 400;
+    font-weight: 400 !important;
     line-height: 34px;
 }
 
 .hero_section h4{
     font-size:26px;
     margin: 0 0 32px !important;
-    font-weight: 400;
+    font-weight: 400 !important;
     line-height: 40px;
 }
 
@@ -198,7 +216,7 @@
     position: absolute;
     right: 2px;
     padding: 0 30px;
-    font-weight:400;
+    font-weight:400 !important;
     font-size:16px;
     border-radius: 0 5px 5px 0;
 }
@@ -240,9 +258,12 @@
 
 .hero-card-content .card-subheading {
     font-weight: 400;
-    font-size: 15px;
-    line-height: 18px;
-    font-family: 'BR Hendrix Light';
+    font-size: 16px;
+    line-height: 24px;
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .product-slider{
@@ -269,6 +290,12 @@
     margin: 12px auto !important;
     color: var(--heading-color);
     font-family: 'Lato', sans-serif !important;
+    font-weight: 400 !important;
+    line-height: 1.4;
+    min-height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .product-slider {
@@ -349,6 +376,11 @@
     position: relative;
 }
 
+.category-section:hover{
+    box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+    background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
+}
+
 .category-section img {
     width: 100%;
     height: 100%;
@@ -405,7 +437,7 @@
     border: 1px solid rgba(39, 48, 78, 0.2);
     border-radius: 5px;
     background: var(--white-color);
-    padding: 30px 0 0;
+    padding: 35px 0 0;
     position: relative;
     min-height: 235px;
 }
@@ -424,7 +456,7 @@
     border-radius: 5px;
     text-align: center;
     padding: 10px 30px;
-    margin: 20px 0 0;
+    margin: 25px 0 0;
     min-height: 90px;
     display: flex;
     flex-direction: column;
@@ -432,11 +464,15 @@
 }
 
 .review-card .footer_content h6 {
-    font-weight: 400;
+    font-weight: 400 !important;
     font-size: 16px;
-    line-height: 20px;
     color: var(--heading-color);
     font-family: 'Lato', sans-serif !important;
+    line-height: 1.4;
+    min-height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .review-card .footer_content p {
@@ -445,7 +481,7 @@
     line-height: 11px;
     color: var(--heading-color);
     opacity: 70%;
-    margin: 12px 0 0 !important;
+    margin: 10px 0 0 !important;
 }
 
 .review-card .rating_count {
@@ -460,8 +496,8 @@
     align-items: center;
     justify-content: center;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 34px;
+    font-size: 15px;
+    line-height: 32px;
 }
 
 .comparisons-slider{
@@ -489,6 +525,7 @@
 .comparisons-slider .comparisons-card{
     position: relative;
     width: 44%;
+    padding: 35px 0 0;
 }
 
 .comparisons-slider .vs-divider{
@@ -567,14 +604,14 @@
     align-items: center;
     justify-content: center;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 34px;
+    font-size: 15px;
+    line-height: 32px;
 }
 
 .comparisons-footer {
     width: 100%;
     text-align: center;
-    padding: 15px 0 0;
+    padding: 10px 0 0;
     color: var(--heading-color);
     opacity: 70%;
     font-weight: 400;
