--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -3,7 +3,8 @@
   background: var(--white-color);
   backdrop-filter: none !important;
   text-align: center;
-  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1)) drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1))
+    drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .best-page-card .hero-card-content .count {
@@ -16,7 +17,7 @@
   font-size: 18px !important;
   color: var(--heading-color);
   opacity: 80%;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   font-weight: 400;
 }
 
@@ -58,10 +59,12 @@
   color: var(--heading-color);
   position: relative;
 }
-.compare-container tbody tr td{
-  font-size:15px;
+
+.compare-container tbody tr td {
+  font-size: 15px;
   font-weight: 400;
 }
+
 .compare-container .compare_image {
   width: 100px;
   height: 100px;
@@ -87,7 +90,7 @@
   color: var(--white-color);
 }
 
-.compare-container .count.dark-color{
+.compare-container .count.dark-color {
   background: rgba(39, 48, 78, 0.9);
 }
 
@@ -132,11 +135,37 @@
 .compare-container tbody .sub-inner-padding {
   padding-left: 25px !important;
 }
+
 .compare-container thead tr th p,
-.compare-container tbody tr th p{
-  font-size:15px;
-  font-weight: 600!important;
+.compare-container tbody tr th p {
+  font-size: 15px;
+  font-weight: 600 !important;
 }
+
+.compare-container thead {
+  position:sticky;
+  top: -1px;
+  z-index: 1000;
+}
+
+.compare-container thead tr th .device-name .compare_image {
+  width: 50px !important;
+  height: 50px !important;
+  display: none !important;
+}
+
+.compare-container thead.isSticky tr th .device-name .compare_image {
+  display: block !important;
+}
+
+.compare-container thead.isSticky tr th{
+  padding: 0 !important;
+}
+
+.compare-container thead.isSticky tr th .best-tag-product{
+  position: static !important;
+}
+
 .see_all_btn_outline {
   border: 1px solid var(--secondary-color) !important;
   border-radius: 5px;
@@ -190,7 +219,7 @@
 
 .compare-container-wrapper {
   position: relative;
-  padding: 50px 0 0;
+  padding: 20px 0 0;
 }
 
 .compare-container-wrapper:before {
@@ -203,7 +232,7 @@
   z-index: 1;
 }
 
-.best-product-wrapper{
+.best-product-wrapper {
   position: relative;
 }
 
@@ -253,11 +282,11 @@
 
 .filter-section h6 {
   background: #f4f7fb;
-  padding: 15px 10px;
+  padding: 8px 10px;
   text-transform: uppercase;
   margin: 0 0 8px !important;
   color: var(--heading-color);
-  font-weight: 400;
+  font-weight: 600 !important;
   font-size: 16px;
   line-height: 34px;
   text-transform: uppercase;
@@ -277,12 +306,12 @@
 .filter-accordion .accordion-item button {
   background: transparent !important;
   justify-content: space-between;
-  font-weight: 400;
-  font-size: 16px;
+  font-weight: 400 !important;
+  font-size: 15px;
   line-height: 34px;
   border: none !important;
   box-shadow: none;
-  padding: 15px 10px;
+  padding: 8px 10px;
   color: var(--heading-color);
 }
 
@@ -365,6 +394,7 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  padding-left: 50px;
 }
 
 .filtered-data span {
@@ -388,7 +418,7 @@
 
 .filtered-data-select span {
   font-weight: 400;
-  font-size: 15px;
+  font-size: 18px;
   line-height: 34px;
   color: var(--heading-color);
   opacity: 80%;
@@ -428,7 +458,7 @@
   font-size: 16px;
   line-height: 22px;
   color: var(--heading-color);
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
 .best-product-listing .number {
@@ -469,7 +499,7 @@
   flex-direction: column !important;
   padding: 0 !important;
   gap: 18px !important;
-  margin: 15px 0 !important;
+  margin: 8px 0 !important;
 }
 
 .best-product-listing
@@ -509,15 +539,17 @@
 .best-product-listing
   .product-listing-inner-content
   .product-score-container
-  .score-section .score-detail i {
+  .score-section
+  .score-detail
+  i {
   font-weight: 400;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 18px;
   position: relative;
   bottom: 6px;
   color: var(--heading-color);
   opacity: 80%;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
 .best-product-listing
@@ -591,20 +623,20 @@
   font-size: 15px !important;
 }
 
-.best-product-listing .table-accordion .spec-section h5{
+.best-product-listing .table-accordion .spec-section h5 {
   font-size: 15px !important;
 }
 
-.best-product-listing .table-accordion .spec-section h5.text-ellipse span{
-  display:none;
+.best-product-listing .table-accordion .spec-section h5.text-ellipse span {
+  display: none;
 }
 
 .best-product-listing .table-accordion .spec-section .spec-item .spec-col span {
   font-size: 14px !important;
 }
 
-.best-product-listing .table-accordion .spec-section .spec-item{
-  padding: 8px 3px !important;
+.best-product-listing .table-accordion .spec-section .spec-item {
+  padding: 8px 4px !important;
 }
 
 .best-product-listing .table-accordion .accordion-body {
@@ -677,7 +709,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   color: var(--heading-color);
 }
 
@@ -722,11 +754,11 @@
   width: 50%;
 }
 
-.best-product-listing-item-rating-item span:first-child{
+.best-product-listing-item-rating-item span:first-child {
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   color: var(--heading-color);
 }
 
@@ -751,21 +783,23 @@
   line-height: 30px !important;
 }
 
-.ranking.bestpage-raking-section{
+.ranking.bestpage-raking-section {
   position: relative;
+  margin: 50px 0 0;
+  padding: 20px 0 0;
 }
 
-.ranking.bestpage-raking-section:before{
+.ranking.bestpage-raking-section:before {
   content: "";
-    position: absolute;
-    right: 0px;
-    width: 54px !important;
-    height: 0.7px !important;
-    background: var(--heading-color);
-    opacity: 20%;
-    left: 0;
-    margin: auto;
-    bottom: 100%;
+  position: absolute;
+  right: 0px;
+  width: 54px !important;
+  height: 0.7px !important;
+  background: var(--heading-color);
+  opacity: 20%;
+  left: 0;
+  margin: auto;
+  bottom: 100%;
 }
 
 .ranking.bestpage-raking-section .best-list-item li {
@@ -821,24 +855,24 @@
   display: block;
 }
 
-.product-listing-inner-content .score-section .count{
-  font-size:17px !important;
+.product-listing-inner-content .score-section .count {
+  font-size: 17px !important;
   line-height: 24px !important;
 }
 
-body .product-listing-inner-content .score-section .score-detail h5{
-   font-size: 15px !important;
+body .product-listing-inner-content .score-section .score-detail h5 {
+  font-size: 15px !important;
 }
 
 .sidebar-width {
-  max-width: 224px !important;
+  max-width: 220px !important;
 }
 
-.main-content{
+.main-content {
   width: calc(100% - 224px) !important;
 }
 
-.compare-container.table .best-tag-product{
+.compare-container.table .best-tag-product {
   width: 95%;
   padding: 0px 5px;
   margin: auto;
@@ -858,11 +892,14 @@ body .product-listing-inner-content .score-section .score-detail h5{
   font-weight: 400;
   font-size: 14px;
   line-height: 34px;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
-.compare-container tbody tr th p{
+.compare-container tbody tr th p {
   font-weight: 600;
 }
-.ri-close-line{
+.ri-close-line {
   font-size: 22px;
+}
+.alternatives {
+  margin-bottom: 10px;
 }
